Don't register to support group chats when we don't actually support them.

BUG: 293487